--- a/kudabin/pubspec.yaml
+++ b/kudabin/pubspec.yaml
@@ -19,10 +19,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   google_maps_flutter: ^0.5.25+3
   geolocator: ^5.3.1
   google_fonts: ^0.3.10
   scoped_model: ^1.0.1
+  google_map_location_picker: ^3.2.1+2
+  image_picker: ^0.6.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
