--- a/kudabin/pubspec.yaml
+++ b/kudabin/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   scoped_model: ^1.0.1
   google_map_location_picker: ^3.2.1+2
   image_picker: ^0.6.4
+  flutter_datetime_picker: ^1.3.8
+  intl: ^0.16.0
+  shared_preferences: ^0.5.7+3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
