--- a/kudabin/pubspec.yaml
+++ b/kudabin/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter_datetime_picker: ^1.3.8
   intl: ^0.16.0
   shared_preferences: ^0.5.7+3
+  fluttertoast: ^7.0.1
+  webview_flutter: ^0.3.22+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -54,6 +56,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/garbage.jpg
+    - assets/mapIcons/car.png
+    - assets/mapIcons/col_center.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
