--- a/kudabin/pubspec.yaml
+++ b/kudabin/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   shared_preferences: ^0.5.7+3
   fluttertoast: ^7.0.1
   webview_flutter: ^0.3.22+1
+  datetime_picker_formfield: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
