--- a/kudabin/pubspec.yaml
+++ b/kudabin/pubspec.yaml
@@ -33,6 +33,11 @@ dependencies:
   fluttertoast: ^7.0.1
   webview_flutter: ^0.3.22+1
   datetime_picker_formfield: ^1.0.0
+  firebase_messaging: ^6.0.16
+  toast: ^0.1.5
+  flutter_local_notifications: ^1.4.4+2
+  firebase_database: ^3.1.6
+  flutter_polyline_points: ^0.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
